--- a/blog/templates/blog/create_user.html
+++ b/blog/templates/blog/create_user.html
@@ -1,22 +1,32 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="{% static 'css/create_contact.css' %}">
 	<title>Document</title>
 </head>
 <body>
-	<form action="." method="POST">
-		{%csrf_token%}
-		<p>Name</p>
-		<input type="text" name="name">
-		<p>Surname</p>
-		<input type="text" name="surname">
-		<p>Date</p>
-		<input type="text" name="date">
-		<p>Telefon number</p>
-		<input type="text" name="tel_number">
-		<input type="submit" value="send">
-	</form>
+	<div class="container">
+		<div class="element">
+			<h1>Add contact</h1>
+			<form action="." method="POST">
+				{%csrf_token%}
+				<p>Name</p>
+				<input type="text" name="name">
+				<p>Surname</p>
+				<input type="text" name="surname">
+				<p>Date</p>
+				<input type="text" name="date">
+				<p>Telefon number</p>
+				<input type="text" name="tel_number">
+				<div class="button">
+					<input type="submit" value="send">
+				</div>
+			</form>
+		</div>
+	</div>
+	
 </body>
 </html>
