--- a/blog/templates/blog/delete_contact.html
+++ b/blog/templates/blog/delete_contact.html
@@ -1,16 +1,25 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="{% static 'css/delete_contact.css' %}">
 	<title>Document</title>
 </head>
 <body>
-	<h3>Вы на странице удаление юзера</h3>
-	<p>удалить юзера <q>{{contact.name}}</q></p>
-	<form action="" method="POST">
-		{%csrf_token%}
-		<input type="submit" value="да">
-	</form>
+	<div class="container">
+		<div class="element">
+			<h3>Вы на странице удаление юзера</h3>
+			<p>удалить юзера <q>{{contact.name}}</q></p>
+			<form action="" method="POST">
+				{%csrf_token%}
+				<div class="button">
+					<input type="submit" value="да">
+					<a href="/">нет</a>	
+				</div>
+			</form>
+		</div>
+	</div>
 </body>
 </html>
