--- a/blog/static/css/create_contact.css
+++ b/blog/static/css/create_contact.css
@@ -23,11 +23,14 @@ input[type="text"]{
 .element h1{
 	text-align: center;
 }
+.element h5{
+	color: red;
+}
 .button{
 	text-align: center;
 }
 .button input{
-	width: 25%;
+	width: 30%;
 	margin: 25px 0 10px 0;
 	text-transform: uppercase;
 	background: green;
@@ -37,6 +40,7 @@ input[type="text"]{
 	font-weight: bold;
 	font-size: 22px;
 	border-radius: 10px;
+	outline: none;
 }
 .button input:hover{
 	cursor: pointer;
