--- a/blog/templates/blog/delete_contact.html
+++ b/blog/templates/blog/delete_contact.html
@@ -1,13 +1,7 @@
+{% extends 'main.html' %}
+{% block content %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="{% static 'css/delete_contact.css' %}">
-	<title>Document</title>
-</head>
-<body>
 	<div class="container">
 		<div class="element">
 			<h3>Вы на странице удаление юзера</h3>
@@ -21,5 +15,4 @@
 			</form>
 		</div>
 	</div>
-</body>
-</html>
+{% endblock content %}
