--- a/blog/templates/blog/userlist.html
+++ b/blog/templates/blog/userlist.html
@@ -1,13 +1,7 @@
+{% extends 'main.html' %}
+{% block content %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
-	<title>Document</title>
-</head>
-<body>
   <header>
     <div class="logo">
       <h2>Список контактов</h2>
@@ -54,6 +48,4 @@
 	 </div>
 	{%endfor%}
 	</div>
-	
-</body>
-</html>
+{% endblock content %}
